--- a/dns/Dockerfile
+++ b/dns/Dockerfile
@@ -1,9 +1,14 @@
-FROM ubuntu/bind9
-
-RUN apt update
-RUN apt upgrade -y
-RUN apt install dnsutils -y
-COPY ./etc/* /etc/bind
-
-
-
+FROM ubuntu:latest 
+  
+ RUN apt-get update \ 
+     && apt-get install -y \ 
+     bind9 \ 
+     bind9-doc \ 
+     bind9utils \ 
+     dnsutils \ 
+     iputils-ping \ 
+     nano 
+  
+ RUN apt-get upgrade -y 
+  
+ CMD /usr/sbin/named ; tail -F /dev/null
